匹配代码优化